Скрипты и стили в админке - через файл Связь с системами оплаты

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ package-lock.json
 node_modules
 com_jshopping_addon_courierexe/media/css
 com_jshopping_addon_courierexe/media/js
+!/com_jshopping_addon_courierexe/media/js/admin-script.js
+!/com_jshopping_addon_courierexe/media/css/admin-style.css
