Подключение скриптов Фильтрация плагина в заказе Поправил манифест Ajax загрузка ПВЗ Локализация select2.js

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ com_jshopping_addon_courierexe/media/css
 com_jshopping_addon_courierexe/media/js
 !/com_jshopping_addon_courierexe/media/js/admin-script.js
 !/com_jshopping_addon_courierexe/media/css/admin-style.css
+!/com_jshopping_addon_courierexe/media/js/script.js
